--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,16 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "mcp>=0.1.2",
+  "fastmcp>=0.9.0",
   "langgraph>=0.2.0",
   "pydantic>=2.8.0",
 ]
 
 [project.scripts]
 mcp-langgraph-server = "mcp_langgraph_agents.server:run"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
 
 [build-system]
 requires = ["setuptools>=68.0.0"]
